# webassets

./: .cruft.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
pelican/plugins/webassets/: __init__.py  test_webassets.py  webassets.py
tests/: test_webassets.py
tests/test_data/: this-is-a-super-article.rst
tests/test_data/static/css/: style.min.css
tests/test_data/templates/: base.html
