[tool.autopub]
project-name = "Web Assets"
git-username = "botpub"
git-email = "52496925+botpub@users.noreply.github.com"
append-github-contributor = true

[tool.isort]
# Maintain compatibility with Black
profile = "black"
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-fancy-pypi-readme>=22.8.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pelican"]

[project]
name = "pelican-webassets"
version = "2.0.0"
description = "Pelican plugin to manage web assets such as CSS and JS files"
authors = [
  { name ="Pelican Dev Team <authors@getpelican.com>" },
]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["pelican", "plugin", "webassets", "css", "js", "minimization", "compilation"]
repository = "https://github.com/pelican-plugins/webassets"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]
requires-python = "~= 3.7"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
  "pelican >=4.5",
]

[project.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/pelican-plugins/webassets/issues"

[dependency-groups]
dev = [
    "cssmin == 0.2.0",
    "libsass >=0.22.0",
    "black == 23.3.0",
    "flake8 == 3.9.2",
    "flake8-black == 0.3.6",
    "invoke == 2.2.0",
    "isort == 5.11.5",
    "markdown == 3.4.4",
    "pytest == 6.2.5",
    "pytest-cov == 3.0.0",
    "pytest-sugar == 0.9.7",
]

markdown = [
    "markdown == 3.4.4",
]
