[tool.autopub]
project-name = "Web Assets"
git-username = "botpub"
git-email = "52496925+botpub@users.noreply.github.com"
append-github-contributor = true

[tool.ruff]
exclude = ["pelican/plugins/webassets/vendor/"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "first-party", "pelican", "local-folder", "third-party"]

# Designate "pelican" as separate import section
[tool.ruff.lint.isort.sections]
pelican = ["pelican"]

[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-fancy-pypi-readme>=22.8.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pelican"]

[project]
name = "pelican-webassets"
version = "2.0.0"
description = "Pelican plugin to manage web assets such as CSS and JS files"
authors = [
  { name ="Pelican Dev Team <authors@getpelican.com>" },
]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["pelican", "plugin", "webassets", "css", "js", "minimization", "compilation"]
repository = "https://github.com/pelican-plugins/webassets"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]
requires-python = "~= 3.7"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
  "pelican >=4.5",
]

[project.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/pelican-plugins/webassets/issues"

[dependency-groups]
dev = [
    "cssmin == 0.2.0",
    "libsass >=0.22.0",
    "invoke == 2.2.0",
    "markdown == 3.4.4",
    "pytest == 6.2.5",
    "pytest-cov == 3.0.0",
    "pytest-sugar == 1.0.0",
    "ruff>=0.7.1",
]
markdown = [
    "markdown == 3.4.4",
]
